# random-travelers

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Procfile  README.md  app.json  gacha.py  gacha_v01.py  index.html  kind-cluster.yaml  main.py  nixpacks.toml  nohup.out  pyproject.toml  railway.toml  requirements.txt  run.py
.github/: labeler.yml  pull-request-template.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug-report.md  generic-template.md
.github/configs/: issue-labeler.yaml  labeler.yml  trivy.yaml
.github/workflows/: build.yaml  cleanup.yaml  issue-labeler.yaml  publish.yaml  pull-request-labeler.yaml  pull_request_labeler.yaml  release-please.yaml  semantic-issue-action.yaml  tests.yaml
app/: config.py  database.py  main.py
app/api/v0/: cruds.py  routers.py  schemas.py
app/api/v1/: cruds.py  helpers.py  models.py  routers.py  schemas.py  services.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html.mako
app/v0/: routers.py
css/: style.css
js/: script.js
manifests/: fastapi.yaml  ingress.yaml  issuer.yaml  kustomization.yaml  mysql.yaml  namespace.yaml  sealed-secrets.yaml
python/: gacha.py
random_travelers/v0/: cruds.py
random_travelers/v1/: routers.py
sql/: import.sql
static/: script.js
static/css/: style_v01.css
templates/: index.html  index_v01.html
tests/: test_endpoints.py  test_healthz.py
