[tool.poetry]
name = "random-travelers"
version = "0.7.1"
description = "People who make thier decisions decided by Cloud Native"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.14.0"
numpy = "^2.3.5"
mysql-connector-python = "^9.5.0"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
mako = "^1.3.10"
pytest = "^8.4.2"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
