[tool.poetry]
name = "random-travelers"
version = "0.7.1"
description = "People who make thier decisions decided by Cloud Native"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.14.2"
numpy = "^2.4.1"
mysql-connector-python = "^9.5.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
mako = "^1.3.10"
pytest = "^9.0.2"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
